# MiniSLAM

./: .gitignore  CMakeLists.txt  README.md
app/: run_vo.cpp
include/minislam/: camera.h  dataset.h  frame.h
src/: camera.cpp  dataset.cpp
